Figured out the problem Add --enable-preview for tests